--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,13 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27
+envlist =
+    py{26,27}-django{15,16}
 
 [testenv]
 commands =
     pip install --use-mirrors -q -r requirements.txt
     make unit functional
+deps =
+    django15: Django>=1.5,<1.6
+    django16: Django>=1.6,<1.7
