--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
+sudo: false
 python:
   - "2.7"
-# command to install dependencies
+  - "3.4"
+  - "3.5"
 install:
   - pip install -r requirements.txt
-  # Deal with issue on Travis builders re: multiprocessing.Queue :(
-  - "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
-# command to run tests
-script: make unit functional
+script:
+  - make unit functional
